fix(styles): :bug: fix PrivacyView ul markers, fix debug text wrapping

--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -1000,13 +1000,10 @@
 
     & ul {
       @apply ml-6;
+      list-style-type: '— ';
 
       & li {
         @apply py-2;
-
-        &::marker {
-          content: '— ';
-        }
       }
     }
 
